Update percentage color

--- a/ProgressKit/Base.lproj/Main.storyboard
+++ b/ProgressKit/Base.lproj/Main.storyboard
@@ -1152,7 +1152,7 @@
                                         <real key="value" value="0.0"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="color" keyPath="percentageColor">
-                                        <color key="value" red="1" green="0.53543605770000002" blue="0.1175842166" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="value" red="0.0" green="0.55294117649999996" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </customView>
